--- a/genindex.html
+++ b/genindex.html
@@ -244,6 +244,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#cypcap.PcapIf.flags">flags (cypcap.PcapIf attribute)</a>
 </li>
+      <li><a href="index.html#cypcap.Dumper.flush">flush() (cypcap.Dumper method)</a>
+</li>
       <li><a href="index.html#cypcap.Dumper.ftell">ftell() (cypcap.Dumper method)</a>
 </li>
   </ul></td>
